# nuDIS

./: .gitignore  LICENSE  cross_section.py  environment.yml  events.py  generator.py  pyproject.toml  readme.md
htcondor/: cc_proton_xsec.sub  run_cc_proton.sh
scripts/: run_Q2_scan.sh  run_all_partons.sh  run_cc_proton_events.py  run_cc_proton_xsec.py
src/couplings/: couplings.py
src/cross_sections/cc/nu_e/: antineutrino_positron.py
src/cross_sections/cc/nu_mu/: neutrino_muon.py
src/cross_sections/nc/: neutral_current_xsec.py
src/cuts/: theory_cut.py
src/energy_spectrum/: muon_width.py
src/particles/: pdg_id.py
src/pdfs/: pdf_set.py
src/utils/: read_card.py
